--- a/templates/job.erb
+++ b/templates/job.erb
@@ -13,5 +13,9 @@
    end -%>
 
 # Job Definition
+<% unless (@reboot) -%>
 <%= @minute %> <%= @hour %> <%= @date %> <%= @month %> <%= @weekday %>  <%= @user %>  <%= @command %>
+<% else -%>
+@reboot <%= @user %>  <%= @command %>
+<%- end -%>
 
